--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
 <meta charset="utf-8">
 <title>无标题文档</title>
-</head>
+<style type="text/css">
+body {
+	background-image: url(18249376_133247229000_2.jpg);
+}
+</style></head>
 
 <body>
-<audio controls="controls" src="1.wma">
+<audio controls src="1.wma">
 Your browser does not support the audio element.
 </audio>
 <h1>悯农</h1>
