--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ body {
 </style></head>
 
 <body>
-<audio controls src="1.wma">
-Your browser does not support the audio element.
+<audio controls src="1.wma"/>
+r does not support the audio element.
 </audio>
 <h1>悯农</h1>
 <p>锄禾日当午</p>
