--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<!doctype html>
 <html>
-
 <head>
-<meta charset="utf-8">
-<title>无标题文档</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>好像对你说</title>
 <style type="text/css">
 body {
 	background-image: url(18249376_133247229000_2.jpg);
+	background-size:100% 100%;
+}
+#biaobai {
+	font-size: 136px;
+	text-align:center;
+	margin:140px;
+	color:red;
 }
 </style></head>
 
-<body>
-<audio controls src="1.wma"/>
-r does not support the audio element.
-</audio>
-<h1>悯农</h1>
-<p>锄禾日当午</p>
-<p>汗滴禾下土</p>
-<p>谁知盘中餐</p>
-<p>粒粒皆辛苦</p>
+<body id="biaobai">
+我们一起吃饭吧，你请客，我等好久啦~
 </body>
 </html>
